--- a/src/app/pages/home/components/hero-section/hero-section.component.html
+++ b/src/app/pages/home/components/hero-section/hero-section.component.html
@@ -23,7 +23,7 @@
     </p>
     <div class="flex flex-wrap justify-center gap-4">
       <a
-        href="/tuner"
+        href="tuner"
         class="rounded-full bg-[#4d9263] px-10 py-3 font-semibold text-white shadow-[0_20px_50px_rgba(0,0,0,0.6)] transition hover:scale-105 hover:bg-[#5ea172] hover:shadow-[#4d9263]/50"
       >
         Começar Agora →
