--- a/src/app/pages/home/components/about-section/about-section.component.html
+++ b/src/app/pages/home/components/about-section/about-section.component.html
@@ -1,6 +1,6 @@
 <section
     id="sobre"
-    class="bg-[#213141]/30 px-6 py-24 backdrop-blur-xl shadow-xl border border-white/20"
+    class="bg-[#213141]/30 px-6 py-24 backdrop-blur-xl shadow-xl border-y border-white/20"
   >
     <div class="mx-auto max-w-5xl text-center">
       <h2 class="mb-6 text-3xl font-bold text-white">
