--- a/src/app/pages/home/components/cta-section/cta-section.component.html
+++ b/src/app/pages/home/components/cta-section/cta-section.component.html
@@ -1,5 +1,5 @@
 <section
-  class="bg-[#213141]/30 px-6 py-24 backdrop-blur-xl shadow-xl border border-white/20"
+  class="bg-[#213141]/30 px-6 py-24 backdrop-blur-xl shadow-xl border-y border-white/20"
 >
   <div class="mx-auto max-w-3xl text-center">
     <h2 class="mb-6 text-3xl font-bold text-white">
